@@ -1,2 +1,5 @@
 #define ARANGODB_BUILD_REPOSITORY "@ARANGODB_BUILD_REPOSITORY@"
 #define HAVE_ARANGODB_BUILD_REPOSITORY @HAVE_ARANGODB_BUILD_REPOSITORY@
+
+#define ENTERPRISE_BUILD_REPOSITORY "@ENTERPRISE_BUILD_REPOSITORY@"
+#define HAVE_ENTERPRISE_BUILD_REPOSITORY @HAVE_ENTERPRISE_BUILD_REPOSITORY@
