@@ -1,6 +1,8 @@
 devel
 -----
 
+* added enterprise-build-repository and oskar-build-repository to `--version`
+
 * Make sure cluster statistics in web UI work in case a coordinator is down.
 
 * Updated arangosync to 0.7.8.
